# k210_server

./: .gitattributes  Readme.md
back_end/: Cargo.toml
back_end/src/: httphandles.rs  k210handle.rs  main.rs
front_end/: package-lock.json  package.json
front_end/src/: App.vue  main.js
front_end/src/components/: CommuLog.vue  K210Catalog.vue  RouterCont.vue
front_end/src/store/: index.js  k210s.js
net210/: Cargo.toml  Makefile
net210/.cargo/: config
net210/src/: entry.asm  linker.ld  main.rs  sbi.rs
net210/src/net/: connection.rs  dvc.rs  mod.rs  tcp_connect.rs
net210/src/screen/: command.rs  lcd.rs  mod.rs
net210/src/tools/: mod.rs  timer.rs
