[package]
name = "net210"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
board_qemu = []
board_k210 = []

[dependencies]
smoltcp = { version = "0.8.0", default-features = false, features = ["proto-ipv4", "medium-ethernet", "socket-tcp"] }
k210-pac ={ version = "0.2.0"}

[profile.release]
debug = true
