[package]
name = "net210"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
board_qemu = []
board_k210 = []

[dependencies]
smoltcp = { version = "0.9.1", default-features = false, features = ["proto-ipv4", "medium-ethernet", 
                "socket-tcp", "log", "medium-ip"] }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }
nb = "1.1.0"

[profile.release]
debug = true
