[package]
name = "net210"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
board_qemu = []
board_k210 = []

[dependencies]
smoltcp = { version = "0.11.0", default-features = false, features = ["proto-ipv4", "medium-ethernet", 
                "socket-udp", "log"] }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }
nb = "1.1.0"
lazy_static = "1.4.0"

[profile.release]
debug = true
